--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.1, 8.2, 8.3]
+        php: [8.2]  # Sesuaikan dengan PHP yang Anda gunakan
 
     name: PHP ${{ matrix.php }}
 
@@ -43,5 +43,5 @@ jobs:
       - name: Generate app key
         run: php artisan key:generate
 
-      # - name: Execute tests
-        # run: vendor/bin/phpunit
+      - name: Run tests
+        run: php artisan test --env=testing  # Gunakan php artisan test untuk menjalankan pengujian Laravel
