Test Change To Resources

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/index.php"
         }
     ],
     "env": {
