--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "midtrans/midtrans-php": "^2.6"
     },
     "require-dev": {
+        "beyondcode/laravel-er-diagram-generator": "^4.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
