--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
-        "midtrans/midtrans-php": "^2.6"
+        "midtrans/midtrans-php": "^2.6",
+        "phpoffice/phpspreadsheet": "^1.29"
     },
     "require-dev": {
         "beyondcode/laravel-er-diagram-generator": "^4.0",
