--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,21 @@
-APP_NAME=Laravel
+APP_NAME=BaraShop
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:JR0tmvg8flkBmoW2pF8pFsEXffo9g6deuSNFuV0drqw=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST="aws-0-ap-southeast-1.pooler.supabase.com"
+DB_PORT=5432
+DB_DATABASE=""
+DB_USERNAME=""
+DB_PASSWORD=""
+DATABASE_URL=""
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,12 +31,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=""
+MAIL_PASSWORD=""
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="${APP_NAME}@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -57,3 +59,18 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+JWT_SECRET=ayoganyangfufufafa
+
+CLIENT_URL=http://localhost:3000
+
+FONNTE_API_KEY=""
+
+CLOUDINARY_URL=""
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
+
+MIDTRANS_SERVER_KEY=""
+MIDTRANS_CLIENT_KEY=""
+MIDTRANS_IS_PRODUCTION=false
